// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dev/i18n/extractors/handlebars extracts handlebars default messages 1`] = `
Array [
  Array [
    "ui.id-1",
    Object {
      "description": "Message description",
      "message": "Message text",
    },
  ],
]
`;

exports[`dev/i18n/extractors/handlebars throws on empty id 1`] = `
Array [
  Array [
    [Error: Empty id argument in Handlebars i18n is not allowed.],
  ],
]
`;

exports[`dev/i18n/extractors/handlebars throws on missing defaultMessage property 1`] = `
Array [
  Array [
    [Error: defaultMessage value in Handlebars i18n should be a string ("message-id").],
  ],
]
`;

exports[`dev/i18n/extractors/handlebars throws on wrong number of arguments 1`] = `
Array [
  Array [
    [Error: Wrong number of arguments for handlebars i18n call.],
  ],
]
`;

exports[`dev/i18n/extractors/handlebars throws on wrong properties argument type 1`] = `
Array [
  Array [
    [Error: Properties string in Handlebars i18n should be a string literal ("ui.id-1").],
  ],
]
`;
